--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A278b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15A278b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TodayViewController">
@@ -21,28 +21,6 @@
         <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="356" height="339"/>
             <subviews>
-                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
-                    <rect key="frame" x="-2" y="309" width="270" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="266" id="EKs-6W-t1D"/>
-                        <constraint firstAttribute="height" constant="21" id="bx4-Iq-jVm"/>
-                    </constraints>
-                    <animations/>
-                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="RNt-q7-X9c">
-                        <font key="font" metaFont="system"/>
-                        <segments>
-                            <segment label="⬇︎" width="29">
-                                <menu key="menu" id="cXh-7N-iT2"/>
-                            </segment>
-                            <segment label="English" width="78" selected="YES" tag="1"/>
-                            <segment label="Russian" width="78"/>
-                            <segment label="Finnish" width="76"/>
-                        </segments>
-                    </segmentedCell>
-                    <connections>
-                        <action selector="sourceTabClick:" target="-2" id="MkZ-Ai-GMJ"/>
-                    </connections>
-                </segmentedControl>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
                     <rect key="frame" x="105" y="158" width="60" height="31"/>
                     <constraints>
@@ -90,7 +68,7 @@
                         <animations/>
                     </scroller>
                     <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="pDs-cv-KRe">
-                        <rect key="frame" x="224" y="1" width="15" height="133"/>
+                        <rect key="frame" x="254" y="0.0" width="16" height="100"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
@@ -148,7 +126,7 @@
                         <animations/>
                     </scroller>
                     <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="zIi-wI-aG1">
-                        <rect key="frame" x="224" y="1" width="15" height="133"/>
+                        <rect key="frame" x="254" y="0.0" width="16" height="100"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
@@ -173,6 +151,28 @@
                     </segmentedCell>
                     <connections>
                         <action selector="targetTabClick:" target="-2" id="WYE-hV-Qii"/>
+                    </connections>
+                </segmentedControl>
+                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
+                    <rect key="frame" x="-2" y="309" width="270" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="266" id="EKs-6W-t1D"/>
+                        <constraint firstAttribute="height" constant="21" id="bx4-Iq-jVm"/>
+                    </constraints>
+                    <animations/>
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="RNt-q7-X9c">
+                        <font key="font" metaFont="system"/>
+                        <segments>
+                            <segment label="⬇︎" width="17">
+                                <menu key="menu" id="cXh-7N-iT2"/>
+                            </segment>
+                            <segment label="Ⓐ &gt; (Finnish)" width="102" selected="YES" tag="1"/>
+                            <segment label="English" width="71"/>
+                            <segment label="Russian" width="71"/>
+                        </segments>
+                    </segmentedCell>
+                    <connections>
+                        <action selector="sourceTabClick:" target="-2" id="MkZ-Ai-GMJ"/>
                     </connections>
                 </segmentedControl>
             </subviews>
